# VoiceChange

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/zxh/voicechange/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  Player.cpp  Player.h  com_zxh_voicechange_MainActivity.h  native-lib.cpp
app/src/main/java/com/zxh/voicechange/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/zxh/voicechange/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
